2007-02-08  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix bogus return value
	* dbmail-mailbox.c, dbmail-mailbox.h, dbmailtypes.h:
	refactor uid/msn mapper
	* dbmail-mailbox.c:
	use outlook quirk
	* dm_imaputil.c, dm_imaputil.h, imapcommands.c:
	cleanups

2007-02-06  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	headernames in cache must be case-insentitive

2007-02-05  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Strip namespace off of mailbox searches (closes bug #474).

2007-02-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_user.c, dbmail-user.c, dbmail-user.h:
	removing is_valid test. Validating usernames is deferred to the storage
	layer (closes #490)

2007-01-31  Paul J Stevens <paul@nfg.nl>

	* debian/rules:
	remove --libdir from debian configure run
	* dbmail-message.c, misc.c, misc.h:
	convert 8bit header values to utf8 during insertion (AntonZ)

2007-01-30  Paul J Stevens <paul@nfg.nl>

	* misc.c:
	only encode subjectvalues in the envelope response if the subject is
	both 8bit and utf8 clean
	* dbmail-imapsession.c:
	remove the Recent flag from the PERMANENTFLAGS response
	* test-scripts/testbox:
	add bogus 8bit message to testbox

2007-01-24  Paul J Stevens <paul@nfg.nl>

	* README:
	minor update
	* Makefile.in, configure, man/Makefile.in, misc.c, modules/Makefile.in:
	do rfc2047 encoding of 8bit subjects during envelope construction

2007-01-23  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, check_dbmail.h, check_dbmail_imapd.c, misc.c, 
	  modules/Makefile.in, test-scripts/testimap.py:
	working on #497

2007-01-21  Paul J Stevens <paul@nfg.nl>

	* debian/po/cs.po, debian/po/de.po, debian/po/es.po, debian/po/fr.po, 
	  debian/po/it.po, debian/po/ja.po, debian/po/nl.po, 
	  debian/po/pt_BR.po, debian/po/templates.pot:
	updating PO files
	* db.c, db.h:
	adding db_replycache_unregister
	* Makefile.in, config.in, configure, man/Makefile.in, modules/Makefile.in:
	updating autoconf files

2007-01-20  Aaron Stone  <aaron@serendipity.cx>
