@@ -133,8 +133,8 @@
 
 #define COPYRIGHT \
 "Copyright (C) 1999-2004 IC & S, dbmail@ic-s.nl\n" \
-"Copyright (C) 2001-2006 Aaron Stone, aaron@serendipity.cx\n" \
-"Copyright (C) 2004-2006 NFG Net Facilities Group BV, support@nfg.nl\n" \
+"Copyright (C) 2001-2007 Aaron Stone, aaron@serendipity.cx\n" \
+"Copyright (C) 2004-2007 NFG Net Facilities Group BV, support@nfg.nl\n" \
 "\n" \
 "Please see the AUTHORS and THANKS files for additional contributors.\n" \
 "\n" \
