@@ -1,3 +1,10 @@
+2007-02-26  Paul J Stevens <paul@nfg.nl>
+
+	* export.c:
+	append .mbox to mailbox-name during export
+	* pop3.c:
+	issue +OK after QUIT (closes: #513)
+
 2007-02-08  Paul J Stevens <paul@nfg.nl>
 
 	* db.c:
@@ -8,6 +15,9 @@
 	use outlook quirk
 	* dm_imaputil.c, dm_imaputil.h, imapcommands.c:
 	cleanups
+	* check_dbmail_imapd.c, db.c, db.h, dbmail-imapsession.c, 
+	dbmail-imapsession.h, imapcommands.c, test-scripts/testimap.py:
+	refactor _ic_copy and _ic_store
 
 2007-02-06  Paul J Stevens <paul@nfg.nl>
 
